Bug #5501 SHOW TABLE STATUS should show "view" in upper case
Submitted: 10 Sep 2004 4:03 Modified: 1 Sep 2005 2:51
Reporter: Peter Gulutzan
Status: Closed
Category:Server Severity:S3 (Non-critical)
Version:5.0.2-alpha OS:Linux (SuSE 8.2)
Assigned to: Georg Richter Target Version:

[10 Sep 2004 4:03] Peter Gulutzan
Description:
SHOW TABLE STATUS shows "view" in lower case. 
You (inconsistently) use upper case "VIEW" for SHOW TABLES 
because the standard says use "VIEW" for metadata 
tables e.g. in INFORMATION_SCHEMA. So "VIEW" is 
probably better here too. 

How to repeat:
mysql> create view v as select 'a'; 
Query OK, 0 rows affected (0.00 sec) 
 
mysql> show table status; 
+------+--------+---------+------------+------+----------------+-------------+------------
-----+--------------+-----------+----------------+-------------+-------------+------------
+-----------+----------+----------------+---------+ 
| Name | Engine | Version | Row_format | Rows | Avg_row_length | Data_length | 
Max_data_length | Index_length | Data_free | Auto_increment | Create_time | Update_time |

Check_time | Collation | Checksum | Create_options | Comment | 
+------+--------+---------+------------+------+----------------+-------------+------------
-----+--------------+-----------+----------------+-------------+-------------+------------
+-----------+----------+----------------+---------+ 
| v    | NULL   |    NULL | NULL       | NULL |           NULL |        NULL |           
NULL |         
NULL |      NULL |           NULL | NULL        | NULL        | NULL       | NULL      |  
  NULL | 
NULL           | view    | 
+------+--------+---------+------------+------+----------------+-------------+------------
-----+--------------+-----------+----------------+-------------+-------------+------------
+-----------+----------+----------------+---------+ 
1 row in set (0.00 sec)
[24 Aug 2005 12:52] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/28746
[25 Aug 2005 7:11] Georg Richter
fixed in 5.0.12
[1 Sep 2005 2:51] Paul DuBois
Noted in 5.0.12 changelog.