Fix for bug#5501 (SHOW TABLE STATUS should show "view" in upper case)